@@ -12,6 +12,9 @@ What's New in Python 2.5 release candidate 1?
 Core and builtins
 -----------------
 
+- Bug #1535165: fixed a segfault in input() and raw_input() when
+  sys.stdin is closed.
+
 - On Windows, the PyErr_Warn function is now exported from
   the Python dll again.
 
